# SAIL-GPL

./: .gitignore  CLAUDE.md  README.md  SAIL-GPL-1.0.md  sail-gpl.html
.github/workflows/: ci.yml  pages.yml
example-model/: MODEL_CARD.md  config.json  model.safetensors  tokenizer.json
example-model/srm/: SECURITY.md  aibom.spdx.json  manifest.json  model.sig  security-attestation.json
sail/: README.md  pyproject.toml
sail/examples/: README.md  example-aibom.json
sail/src/sail/: __init__.py  aibom.py  attestation.py  canonical.py  cli.py  commands.py  crypto.py  manifest.py
sail/tests/: test_sail.py
web/: index.html  robots.txt  sail-gpl.html  sitemap.xml
